--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,9 @@ stamp-h[1-9]
 /tests/fsrefs_test_metadata_value
 /tests/fsrefs_test_notify
 /tests/fsrefs_test_support
+/tests/fsrefs_test_tools_info_handle
+/tests/fsrefs_test_tools_output
+/tests/fsrefs_test_tools_signal
 /tests/fsrefs_test_volume
 /tests/fsrefs_test_volume_information
 /tests/fsrefs_test_volume_name
