--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ stamp-h[1-9]
 /tests/fsrefs_test_tools_output
 /tests/fsrefs_test_tools_signal
 /tests/fsrefs_test_volume
+/tests/fsrefs_test_volume_header
 /tests/fsrefs_test_volume_information
 /tests/fsrefs_test_volume_name
 /tests/input
