Worked on format support

--- a/include/libfsrefs.h.in
+++ b/include/libfsrefs.h.in
@@ -302,6 +302,16 @@ int libfsrefs_volume_get_utf16_name(
      size_t utf16_string_size,
      libfsrefs_error_t **error );
 
+/* Retrieves the format version
+ * Returns 1 if successful or -1 on error
+ */
+LIBFSREFS_EXTERN \
+int libfsrefs_volume_get_version(
+     libfsrefs_volume_t *volume,
+     uint8_t *major_version,
+     uint8_t *minor_version,
+     libfsrefs_error_t **error );
+
 #if defined( __cplusplus )
 }
 #endif
