--- a/msvscpp/fsrefs_test_superblock/fsrefs_test_superblock.vcproj
+++ b/msvscpp/fsrefs_test_superblock/fsrefs_test_superblock.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="fsrefs_test_level0_metadata"
-	ProjectGUID="{7E0CAB38-766C-4B17-969D-B10E8DAE6430}"
-	RootNamespace="fsrefs_test_level0_metadata"
+	Name="fsrefs_test_superblock"
+	ProjectGUID="{DFF7AF07-0F74-472D-97FE-BA9A068ABC3F}"
+	RootNamespace="fsrefs_test_superblock"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,11 +176,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fsrefs_test_level0_metadata.c"
+				RelativePath="..\..\tests\fsrefs_test_functions.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\tests\fsrefs_test_memory.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_superblock.c"
 				>
 			</File>
 		</Filter>
@@ -189,6 +193,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_functions.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_libbfio.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\tests\fsrefs_test_libcerror.h"
 				>
