--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -40,12 +40,14 @@ check_PROGRAMS = \
 	fsrefs_test_directory \
 	fsrefs_test_error \
 	fsrefs_test_io_handle \
-	fsrefs_test_level2_metadata \
 	fsrefs_test_level3_metadata \
 	fsrefs_test_metadata_block \
 	fsrefs_test_metadata_block_header \
 	fsrefs_test_metadata_table \
 	fsrefs_test_metadata_value \
+	fsrefs_test_ministore_tree \
+	fsrefs_test_node_header \
+	fsrefs_test_node_record \
 	fsrefs_test_notify \
 	fsrefs_test_superblock \
 	fsrefs_test_support \
@@ -136,18 +138,6 @@ fsrefs_test_io_handle_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
-fsrefs_test_level2_metadata_SOURCES = \
-	fsrefs_test_level2_metadata.c \
-	fsrefs_test_libcerror.h \
-	fsrefs_test_libfsrefs.h \
-	fsrefs_test_macros.h \
-	fsrefs_test_memory.c fsrefs_test_memory.h \
-	fsrefs_test_unused.h
-
-fsrefs_test_level2_metadata_LDADD = \
-	../libfsrefs/libfsrefs.la \
-	@LIBCERROR_LIBADD@
-
 fsrefs_test_level3_metadata_SOURCES = \
 	fsrefs_test_level3_metadata.c \
 	fsrefs_test_libcerror.h \
@@ -225,6 +215,52 @@ fsrefs_test_metadata_value_SOURCES = \
 	fsrefs_test_unused.h
 
 fsrefs_test_metadata_value_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_ministore_tree_SOURCES = \
+	fsrefs_test_functions.c fsrefs_test_functions.h \
+	fsrefs_test_libbfio.h \
+	fsrefs_test_ministore_tree.c \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_unused.h
+
+fsrefs_test_ministore_tree_LDADD = \
+	@LIBBFIO_LIBADD@ \
+	@LIBCPATH_LIBADD@ \
+	@LIBCFILE_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCSPLIT_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_node_header_SOURCES = \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_node_header.c \
+	fsrefs_test_unused.h
+
+fsrefs_test_node_header_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_node_record_SOURCES = \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_node_record.c \
+	fsrefs_test_unused.h
+
+fsrefs_test_node_record_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
