--- a/msvscpp/fsrefs_test_ministore_node/fsrefs_test_ministore_node.vcproj
+++ b/msvscpp/fsrefs_test_ministore_node/fsrefs_test_ministore_node.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="fsrefs_test_level3_metadata"
-	ProjectGUID="{ED4DC329-58CA-4947-ACA1-007E678E89A5}"
-	RootNamespace="fsrefs_test_level3_metadata"
+	Name="fsrefs_test_ministore_node"
+	ProjectGUID="{ECFEFE5C-4167-45D6-9888-3AEDF151EE6A}"
+	RootNamespace="fsrefs_test_ministore_node"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,11 +176,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fsrefs_test_level3_metadata.c"
+				RelativePath="..\..\tests\fsrefs_test_functions.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\tests\fsrefs_test_memory.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_ministore_node.c"
 				>
 			</File>
 		</Filter>
@@ -189,6 +193,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_functions.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsrefs_test_libbfio.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\tests\fsrefs_test_libcerror.h"
 				>
