--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -35,20 +35,20 @@ EXTRA_DIST = \
 
 check_PROGRAMS = \
 	fsrefs_test_block_descriptor \
-	fsrefs_test_block_descriptors \
 	fsrefs_test_checkpoint \
 	fsrefs_test_directory \
 	fsrefs_test_error \
+	fsrefs_test_file_system \
 	fsrefs_test_io_handle \
-	fsrefs_test_level3_metadata \
 	fsrefs_test_metadata_block \
 	fsrefs_test_metadata_block_header \
 	fsrefs_test_metadata_table \
 	fsrefs_test_metadata_value \
-	fsrefs_test_ministore_tree \
+	fsrefs_test_ministore_node \
 	fsrefs_test_node_header \
 	fsrefs_test_node_record \
 	fsrefs_test_notify \
+	fsrefs_test_objects_tree \
 	fsrefs_test_superblock \
 	fsrefs_test_support \
 	fsrefs_test_tools_info_handle \
@@ -68,18 +68,6 @@ fsrefs_test_block_descriptor_SOURCES = \
 	fsrefs_test_unused.h
 
 fsrefs_test_block_descriptor_LDADD = \
-	../libfsrefs/libfsrefs.la \
-	@LIBCERROR_LIBADD@
-
-fsrefs_test_block_descriptors_SOURCES = \
-	fsrefs_test_block_descriptors.c \
-	fsrefs_test_libcerror.h \
-	fsrefs_test_libfsrefs.h \
-	fsrefs_test_macros.h \
-	fsrefs_test_memory.c fsrefs_test_memory.h \
-	fsrefs_test_unused.h
-
-fsrefs_test_block_descriptors_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
@@ -138,15 +126,15 @@ fsrefs_test_io_handle_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
-fsrefs_test_level3_metadata_SOURCES = \
-	fsrefs_test_level3_metadata.c \
+fsrefs_test_file_system_SOURCES = \
+	fsrefs_test_file_system.c \
 	fsrefs_test_libcerror.h \
 	fsrefs_test_libfsrefs.h \
 	fsrefs_test_macros.h \
 	fsrefs_test_memory.c fsrefs_test_memory.h \
 	fsrefs_test_unused.h
 
-fsrefs_test_level3_metadata_LDADD = \
+fsrefs_test_file_system_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
@@ -218,17 +206,17 @@ fsrefs_test_metadata_value_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
-fsrefs_test_ministore_tree_SOURCES = \
+fsrefs_test_ministore_node_SOURCES = \
 	fsrefs_test_functions.c fsrefs_test_functions.h \
 	fsrefs_test_libbfio.h \
-	fsrefs_test_ministore_tree.c \
+	fsrefs_test_ministore_node.c \
 	fsrefs_test_libcerror.h \
 	fsrefs_test_libfsrefs.h \
 	fsrefs_test_macros.h \
 	fsrefs_test_memory.c fsrefs_test_memory.h \
 	fsrefs_test_unused.h
 
-fsrefs_test_ministore_tree_LDADD = \
+fsrefs_test_ministore_node_LDADD = \
 	@LIBBFIO_LIBADD@ \
 	@LIBCPATH_LIBADD@ \
 	@LIBCFILE_LIBADD@ \
@@ -272,6 +260,18 @@ fsrefs_test_notify_SOURCES = \
 	fsrefs_test_unused.h
 
 fsrefs_test_notify_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_objects_tree_SOURCES = \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_objects_tree.c \
+	fsrefs_test_unused.h
+
+fsrefs_test_objects_tree_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
